Corrected stream api practice 2